# clang-tidy-checker

./: .clang-tidy  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  README.md  cspell.json  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.bash
clang_tidy_checker/: __main__.py  cache_model.py  cache_table.py  check_files.py  check_result.py  clang_tidy_executor.py  command_executor.py  config.py  execute_clang_tidy.py  main.py  search_checked_files.py  search_clang_tidy.py  source_hash_calculator.py
doc/: start_auto_build.sh
doc/public/: _redirects
doc/source/: conf.py  index.rst  usage.rst
doc/source/change_log/: index.rst  v0.1.0.md  v0.1.0a6.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md
sample_inputs/: CMakeLists.txt
sample_inputs/configs/: main_only.yaml
sample_inputs/proj_error/: CMakeLists.txt
sample_inputs/proj_error/src/: sample_function.cpp
sample_inputs/proj_no_error/: CMakeLists.txt
sample_inputs/proj_no_error/include/: sample_function.h
sample_inputs/proj_no_error/src/: sample_function.cpp
sample_inputs/proj_warning/: .clang-tidy-checker  CMakeLists.txt
sample_inputs/proj_warning/src/: main.cpp  sample_function.cpp
tests/: cache_table_test.py  check_files_test.py  clang_tidy_executor_test.py  command_executor_test.py  config_test.py  conftest.py  execute_clang_tidy_test.py  integration_test.py  path_scrubber.py  search_checked_files_test.py  search_clang_tidy_test.py  source_hash_calculator_test.py  warning_count_scrubber.py
tests/approvals/: TestCachedClangTidyExecutor.test_execute_clang_tidy_error.approved.txt  TestClangTidyExecutor.test_execute_clang_tidy_no_error.approved.txt  TestClangTidyExecutor.test_execute_clang_tidy_warning.approved.txt  clang_tidy_executor_test.test_execute_clang_tidy_error.approved.txt  clang_tidy_executor_test.test_execute_clang_tidy_no_error.approved.txt  clang_tidy_executor_test.test_execute_clang_tidy_warning.approved.txt  execute_clang_tidy_test.test_execute_clang_tidy_no_error.approved.txt  execute_clang_tidy_test.test_execute_clang_tidy_warning.approved.txt  integration_test.test_build_dir.approved.txt  integration_test.test_check_proj_error.approved.txt  integration_test.test_check_proj_ignore_warning.approved.txt  integration_test.test_check_proj_no_error.approved.txt  integration_test.test_check_proj_warning.approved.txt  integration_test.test_config.approved.txt  integration_test.test_extra_args.approved.txt  integration_test.test_help.approved.txt
