[tool.poetry]
name = "clang_tidy_checker"
version = "0.6.0"
description = "Tool to check C / C++ source codes using clang-tidy."
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/MusicScience37Projects/tools/clang-tidy-checker"
repository = "https://gitlab.com/MusicScience37Projects/tools/clang-tidy-checker.git"
documentation = "https://musicscience37projects.gitlab.io/tools/clang-tidy-checker/"
keywords = ["clang-tidy", "c++"]
# Classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
PyYAML = ">=6"
click = ">=8.1.6"
tqdm = ">=4.65.0"
sqlalchemy = ">=2.0.29"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
Sphinx = "^8.1.3"
black = "^24.10.0"
doc8 = "^1.1.2"
pylint = "^3.3.3"
sphinx-autobuild = "^2024.10.3"
sphinx-orange-book-theme = "^0.15.0"
mypy = "^1.14.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
cmakelang = "^0.6.13"
pytest-approvaltests = "^0.2.4"
types-PyYAML = "^6.0.12.20241230"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
myst-parser = "^4.0.0"
pytest-asyncio = "^0.25.0"
isort = "^5.13.2"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long,fixme"
load-plugins = "pylint.extensions.docparams"

[tool.poetry.scripts]
clang-tidy-checker = "clang_tidy_checker.main:main"

[tool.isort]
profile = "black"
